examples/manual/error/error.bas
'' examples/manual/error/error.bas
''
'' Example extracted from the FreeBASIC Manual
'' from topic 'ERROR'
''
'' See Also: https://www.freebasic.net/wiki/wikka.php?wakka=KeyPgError
'' --------

Error 150
